新增莫比乌斯函数埃筛

--- a/template.tex
+++ b/template.tex
@@ -959,6 +959,25 @@ auto _ = []() {
    \item $\displaystyle [\gcd(i,j)=1]=\sum_{d\mid\gcd(i,j)}\mu(d)$
 \end{itemize}
 
+\begin{lstlisting}[style=cpp]
+array<int, N + 1> miu;
+array<bool, N + 1> ispr;
+auto _ = []() {
+    miu.fill(1);
+    ispr.fill(1);
+    for (int i = 2; i <= N; i++) {
+        if (!ispr[i]) continue;
+        miu[i] = -1;
+        for (int j = 2 * i; j <= N; j += i) {
+            ispr[j] = 0;
+            if ((j / i) % i == 0) miu[j] = 0;
+            else miu[j] *= -1;
+        }
+    }
+    return true;
+}();
+\end{lstlisting}
+
 \subsubsection{莫比乌斯变换/反演}
 
 $f(n)=\sum_{d\mid n}g(d)$，那么有 $g(n)=\sum_{d\mid n}\mu(d)f(\frac{n}{d})=\sum_{n|d}\mu(\frac{d}{n})f(d)$
