更新盒子与球

--- a/template.tex
+++ b/template.tex
@@ -1035,7 +1035,7 @@ $n$ 个球，$m$ 个盒
 
 \begin{figure}[H]
     \flushleft
-    \includegraphics[]{box-and-ball.png}
+    \includegraphics[width=0.95\textwidth]{box-and-ball.png}
     \label{fig:left}
 \end{figure}
 
