更新多项式

--- a/template.tex
+++ b/template.tex
@@ -1037,6 +1037,7 @@ ll sum_miu(ll n) {
 \subsection{多项式}
 
 \begin{lstlisting}[style=cpp]
+#define countr_zero(n) __builtin_ctz(n)
 constexpr int N = 1e6;
 array<int, N + 1> inv;
 
