--- a/template.tex
+++ b/template.tex
@@ -2466,9 +2466,9 @@ windows
 \begin{lstlisting}[style=cpp]
 @echo off
 
-g++ a.cpp -o a -O2 -std=c++17
-g++ b.cpp -o b -O2 -std=c++17
-g++ random.cpp -o random -O2 -std=c++17
+g++ %1 -o a -O2
+g++ %2 -o b -O2
+g++ random.cpp -o random -O2
 
 set cnt=0
 
@@ -2478,7 +2478,7 @@ set cnt=0
     .\random > in
     .\a < in > out.a
     .\b < in > out.b
-    fc out.a out.b
+    fc out.a out.b > nul
 if not errorlevel 1 goto again
 \end{lstlisting}
 
