--- a/template.tex
+++ b/template.tex
@@ -2513,6 +2513,7 @@ clang-format -style=Google -dump-config > ./.clang-format
 BasedOnStyle: Google
 IndentWidth: 4
 AllowShortIfStatementsOnASingleLine: AllIfsAndElse
+ColumnLimit: 100
 \end{lstlisting}
 
 \end{sloppypar}
