--- a/template.tex
+++ b/template.tex
@@ -745,6 +745,30 @@ array<int, 2> exgcd(int a, int b, int c) {
 }
 \end{lstlisting}
 
+\subsection{线性代数}
+
+\subsubsection{向量公约数}
+
+\begin{lstlisting}[style=cpp]
+// 将这两个向量组转化为b.y=0的形式
+array<vec, 2> gcd(vec a, vec b) {
+    while (b.y != 0) {
+        int t = a.y / b.y;
+        a = a - b * t;
+        swap(a, b);
+    }
+    return {a, b};
+}
+
+array<vec, 2> gcd(array<vec, 2> g, vec a) {
+    auto [b, c] = gcd(g[0], a);
+    g[0] = b;
+    g[1] = vec(gcd(g[1].x, c.x), 0);
+    if (g[1].x != 0) g[0].x %= g[1].x;
+    return g;
+}
+\end{lstlisting}
+
 \subsection{线性筛法}
 
 \begin{lstlisting}[style=cpp]
